--- a/ubuntu/rules.in
+++ b/ubuntu/rules.in
@@ -7,5 +7,6 @@
 -A INPUT -p udp -m udp --dport 500 -j ACCEPT
 -A INPUT -p udp -m udp --dport 4500 -j ACCEPT
 -A INPUT -p udp -m policy --dir in --pol ipsec -m udp --dport 1701 -j ACCEPT
--A INPUT -j DROP
+-A INPUT -i @EXTERNAL_IF@ -p tcp -j DROP
+-A INPUT -i @EXTERNAL_IF@ -p udp -j DROP
 COMMIT
