this may help with multiple devices behind a nat (or might not, needs testing)

--- a/ubuntu/l2tp-psk.conf.in
+++ b/ubuntu/l2tp-psk.conf.in
@@ -16,3 +16,10 @@ conn L2TP-PSK-noNAT
   dpddelay=15
   dpdtimeout=30
   dpdaction=clear
+
+conn passthrough-for-non-l2tp
+  type=passthrough
+  left=@VPN_EXTERNAL_IP@
+  right=0.0.0.0
+  rightsubnet=0.0.0.0/0
+  auto=route
