--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
+###
+# VIM
 *.swp
+*.swn
+
+###
+# Ruby
+coverage
+rdoc
+pkg
+test/tmp
+test/version_tmp
+tmp
+pkg
+*.gem
+*.rbc
+lib/bundler/man
+spec/reports
+.config
+InstalledFiles
+.bundle
+
+# YARD artifacts
+.yardoc
+_yardoc
+doc/
