Change net-dns dependency and add readme
Changed the net-dns ruby gem to use a version from my own github
repository.
This is necessary until the original version pulls in a patch of mine.

Also added a Readme file to give a bit more context to the code in the
Personal signpost folder.

--- a/psp/Gemfile
+++ b/psp/Gemfile
@@ -2,4 +2,4 @@ source "http://rubygems.org"
 gem "json"
 gem "sinatra"
 gem "rubydns"
-gem "net-dns" # For testing
+gem "net-dns", :git => "git@github.com:sebastian/net-dns.git"
