--- a/psp/tactic_solver/tactics/direct_connection/config.yml
+++ b/psp/tactic_solver/tactics/direct_connection/config.yml
@@ -1,6 +1,8 @@
 description: Tries to establish a direct peer-to-peer connection.
 prober: prober.rb
 actuator: actuator.rb
-background_process: background.rb start
+daemon:
+  start: daemon.rb start
+  stop: daemon.rb stop
 supported_interfaces:
   - eth
