Updated tactic solver
Right now the tactic solver does absolutely nothing.
I have added a interactive mode.
When you start a node you can choose if it should be a server or client
(all nodes end up being servers, but you  with the server you get to
manually choose the IP and port it should listen to).
All nodes then rendevouz and find each other.

Working on adding client devices, and dispersing that information
around the network.

--- a/psp/Gemfile
+++ b/psp/Gemfile
@@ -3,3 +3,7 @@ gem "json"
 gem "sinatra"
 gem "rubydns"
 gem "net-dns", :git => "git@github.com:sebastian/net-dns.git"
+
+# The following gems are required for the tactic solver
+gem "bud"
+gem "daemons" # For the direct_connection dummy tactic
