--- a/psp/lib/tactics/direct_connection/config.yml
+++ b/psp/lib/tactics/direct_connection/config.yml
@@ -1,8 +1,21 @@
-description: Tries to establish a direct peer-to-peer connection.
-prober: prober.rb
-actuator: actuator.rb
-daemon:
-  start: daemon.rb start
-  stop: daemon.rb stop
-supported_interfaces:
-  - eth
+name: direct_connection
+description: Establishes a direct connection between two devices
+provides:
+  # What it provides can be a regular expression
+  # A tactic could for example provide:
+  # tcp_(in|out)_([\d]?)@local
+  # which would match against:
+  #   tcp_in_8000@local
+  #   tcp_out_12323@local
+  #   ... etc
+  connection:
+    arguments:
+      - destination
+      - port
+requires:
+  # Truths are specified as truth@location
+  # Capital segments in truths are mapped against arguments
+  - tcp_in_Port@Destination 
+  - tcp_out_Port@local
+has_dynamic_requirements: true
+executable: connection.rb
