--- a/psp/Gemfile
+++ b/psp/Gemfile
@@ -3,6 +3,8 @@ gem "json"
 gem "sinatra"
 gem "rubydns"
 gem "net-dns", :git => "git@github.com:sebastian/net-dns.git"
+gem "ZenTest", :git => "https://github.com/seattlerb/zentest.git"
+gem "minitest"
 
 # The following gems are required for the tactic solver
 gem "bud"
