Add Local parameter for need requirements
When expressing needs, you can now use Local as a
placeholder that will be substituted with the local
nodes domain.
This is useful when statically wanting to express
a requirement that potentially should hold in a different
domain that in which the tactic is providing a truth

--- a/psp/lib/tactics/unit_test/config.yml
+++ b/psp/lib/tactics/unit_test/config.yml
@@ -5,6 +5,7 @@ provides:
 requires:
   # Truths are specified as truth@location
   # Capital segments in truths are mapped against arguments
+  - test_cause@Local 
   - test_Destination@Destination 
   - test_Port@local
   - test_Domain@local:Port
