Add .DS_Store to gitignore
.DS_Store added by MacOSX should be ignored

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-###
-# VIM
+#################################################
+#               Vim                             #
+#################################################
 *.swp
 *.swn
 *.swo
 
-###
-# Ruby
+#################################################
+#               Ruby                            #
+#################################################
 coverage
 rdoc
 pkg
@@ -30,6 +32,11 @@ doc/
 *.slo
 *.lo
 *.o
+
+#################################################
+#               Mac OSX                         #
+#################################################
+.DS_Store
 
 #################################################
 #               C code                          #
