Add a DNS server using the tactic solver
A simplistic DNS server is added.
It queries the tactic solver for an ip_for_domain@DOMAIN
and returns the IPs returned as A records.

It requires zeromq at the moment.

--- a/psp/Gemfile
+++ b/psp/Gemfile
@@ -5,6 +5,8 @@ gem "rubydns"
 gem "net-dns", :git => "git@github.com:sebastian/net-dns.git"
 gem "ZenTest"
 gem "minitest"
+gem "rexec"
+gem "zmq"
 
 # The following gems are required for the tactic solver
 gem "bud"
