Use public read-only github repo for net-dns

--- a/psp/Gemfile
+++ b/psp/Gemfile
@@ -2,7 +2,7 @@ source "http://rubygems.org"
 gem "json"
 gem "sinatra"
 gem "rubydns"
-gem "net-dns", :git => "git@github.com:sebastian/net-dns.git"
+gem "net-dns", :git => "git://github.com/sebastian/net-dns.git"
 gem "ZenTest"
 gem "minitest"
 gem "rexec"
