Fixing web service to server ip addresses for signpost

--- a/client_resolver/Makefile.am
+++ b/client_resolver/Makefile.am
@@ -51,6 +51,8 @@ libnss_signpost_la_LDFLAGS = \
 	-shrext .so.2 \
 	-lldns \
 	-lunbound \
+	-lcurl \
+	-ljansson \
 	`pkg-config --libs avahi-client`
 
 
