Add logging to the system
For better visibility into what the system does over time, I have
added a logging class. It logs most actions that are done. The logs
are quite verbose, but should help debug multi signpost setups, if
that is needed later.

The log format is as follows (also documented in the logger class):

  # # From the communication manager
  # - new_signpost_connection: signpost_name
  #     When a connection has been made with a remote signpost in the same
  #     domain.
  # - request_remote_signposts: signpost_name
  #     When the list of signposts known by a remote signpost in the same
  #     domain is requested
  # - return_list_of_signposts: signpost_name
  #     When a signpost returns the list of signposts it knows about
  # - request_remote_truths: signpost_name
  #     When a signpost requests the truths known by a remote signpost
  # - send_truth: signpost_name, *truth
  #     When a truth is passed on to a remote signpost. Constains the full
  #     truth data... this might be an issue in case sensitive data is
  #     passed... Should be changed before the system is put into production
  # - signpost_connection_closed: signpost_name
  #     When the connection to a remote signpost is terminated
  # - resolve_truth_remotely: signpost_name, what, user_info
  #     When a signpost requests a remote signpost to resolve a truth. Log on
  #     the signpost that requests the truth to be resolved.
  # - resolve_for_remote: signpost_name, what, user_info
  #     When a truth is to be resolved locally for a remote signpost
  # - return_list_of_truths: signpost_name
  #     When a signpost returns a list of the truths it knows to a remote
  #     signpost
  # - initiate_connection_to_signpost: signpost_name
  #     When a signpost initiates a connection to a remote signpost
  # - adding_remote_truth: signpost_name, *truth
  #     When a truth from a remote signpost is received and added to the local
  #     truth table. The signpost name is the na

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 #################################################
+#               Signpost                        #
+#################################################
+psp/log
+psp/config.yml
+
+#################################################
 #               Vim                             #
 #################################################
 *.swp
