Adding dnsryby requirement. Using openssl and dnssec to authenticate users.

--- a/psp/Gemfile
+++ b/psp/Gemfile
@@ -6,6 +6,7 @@ gem "net-dns", :git => "git://github.com/sebastian/net-dns.git"
 gem "ZenTest"
 gem "minitest"
 gem "rexec"
+gem "dnsruby"
 
 gem "thin"
 
