Changes to iodine tactic.

--- a/psp/tactics/iodine/config.yml
+++ b/psp/tactics/iodine/config.yml
@@ -4,6 +4,8 @@ description: Provides IP over DNS tunnel using iodine
 provides:
   - connectable_ip@([[:graph:]]*)
 requires:
-  - local_ip@Destination
+  - local_ips@Destination
+  - iodined_password@Destination
+  - iodined_port@Destination
 executable: tactic.rb
 daemon: daemon.rb
