Enable broadcast of resolve requests and truths
Now, imagine we have three nodes A, B and C.
A and C both see B, but not each other.
Now, if A wants to resolve something on node C,
it requires B to relay this information to C.
Therefore we now have an ugly broadcast, where
everyone broadcasts whatever they get to everyone...
O(n^2) in the case where everyone is connected.
Not nice, but will work for our tests.

--- a/psp/config.yml.sample
+++ b/psp/config.yml.sample
@@ -5,8 +5,8 @@
 # For Signpost devs: please do not check your config into the repo.
 
 # Naming the signpost node
-signpost_domain: kle.io
-signpost_client: lab.kle.io
+signpost_domain: signpo.st
+signpost_client: CLIENT_NAME.signpo.st
 description: Signpost running on desktop machine in the lab
 
 # Setting up comms
