--- a/psp/tactics/iodine/config.yml
+++ b/psp/tactics/iodine/config.yml
@@ -4,7 +4,7 @@ description: Provides IP over DNS tunnel using iodine
 provides:
   - connectable_ip@([[:graph:]]*)
 requires:
-  - shared_secret-iodine@Local
+  - shared_secret-iodined@Local
   - local_signpost_domain@Local
 executable: tactic.rb
 daemon: daemon.rb
