--- a/tactics/evals/config.yml
+++ b/tactics/evals/config.yml
@@ -1,6 +1,4 @@
-# Tests are run N minutes past the hour and N minutes
-# past X:30. So OpenVPN set to run at time: 4 will be
-# executed at 12:04, 12:34, 13:04, :13:34, etc.
+# Tests are run N minutes past the hour
 tunnels:
   - name: iodine
     time: 0
@@ -8,27 +6,27 @@ tunnels:
     port: 5000
     interface: eth0
   - name: OpenVPN
-    time: 4
+    time: 10
     ip: 10.1.1.1
     port: 5000
     interface: eth0
   - name: httptunnel
-    time: 12
-    ip: 10.1.1.1
-    port: 5000
-    interface: eth0
-  - name: ipsec
-    time: 16
-    ip: 10.1.1.1
-    port: 5000
-    interface: eth0
-  - name: tcpcrypt
     time: 20
     ip: 10.1.1.1
     port: 5000
     interface: eth0
+  - name: ipsec
+    time: 30
+    ip: 10.1.1.1
+    port: 5000
+    interface: eth0
+  - name: tcpcrypt
+    time: 40
+    ip: 10.1.1.1
+    port: 5000
+    interface: eth0
   - name: sshtunnel
-    time: 24
+    time: 50
     ip: 10.1.1.1
     port: 5000
     interface: eth0
