Adding OCaml build files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,18 @@ psp/log
 psp/config.yml
 
 #################################################
+#               OCaml                           #
+#################################################
+*/_build/
+*/*.bak
+*/*.log
+*/*.byte
+*/*.native
+*/*.dot
+*/setup.bin
+*/setup.data
+
+#################################################
 #               FROST                           #
 #################################################
 frost/_build/
